# autodeafen-eclipse

./: CMakeLists.txt  LICENSE  ONLINE-BUILD.md  README.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
